TestSuite/errors/err0243_const_fun.pas
function f := 666;

const a = f();

begin
end.